# redmage

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: main.yaml
examples/: example_0.py  example_1.py  example_2.py  example_3.py  example_4.py  example_5.py  example_6.py  example_7.py  example_8.py  examples.py  run.sh
examples/tictactoe/: core.py  game.py  run.sh
examples/tictactoe/static/: ttt.css
examples/todo/: core.py  run.sh
examples/todo_jinja2/: core.py  db.py  run.sh
redmage/: __init__.py  components.py  convertors.py  core.py  elements.py  exceptions.py  targets.py  triggers.py  types.py  utils.py
scripts/: format.sh  generate_elements.py  test.sh
tests/: test_convertors.py  test_core.py  test_elements.py  test_triggers.py  test_utils.py
